RESOLVED FIXED111292
Web Inspector: touchmove not emulated inside iframe
https://bugs.webkit.org/show_bug.cgi?id=111292
Summary Web Inspector: touchmove not emulated inside iframe
Alexander Pavlov (apavlov)
Reported 2013-03-04 01:04:03 PST
Steps to reproduce the problem: 1. Turn "Emulate touch events" on from devtools / cog / overrides. 2. Go to http://codepen.io/jussi-kalliokoski/pen/hLBID . 3. Hold mouse down over the element containing the text. 4. Move the mouse while holding the mouse button down. What is the expected behavior? The console should log that the touchmove event occurred. What went wrong? Only touchstart and touchend get logged. Upstreaming https://code.google.com/p/chromium/issues/detail?id=178714
Attachments
Patch (5.63 KB, patch)
2013-03-04 01:11 PST, Alexander Pavlov (apavlov)
vsevik: review+
Alexander Pavlov (apavlov)
Comment 1 2013-03-04 01:11:44 PST
Vsevolod Vlasov
Comment 2 2013-03-04 01:31:26 PST
Comment on attachment 191170 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=191170&action=review > Source/WebCore/page/EventHandler.cpp:1631 > + // FIXME: this should be moved elsewhere to also be able to dispatch touchcancel events. Isn't this comment obsolete? > Source/WebCore/page/EventHandler.cpp:1632 > + bool defaultPrevented = dispatchSyntheticTouchEventIfEnabled(mouseEvent); if (dispatchSyntheticTouchEventIfEnabled(mouseEvent)) return true;
Alexander Pavlov (apavlov)
Comment 3 2013-03-04 01:38:47 PST
Note You need to log in before you can comment on or make changes to this bug.