Web Inspector: touchmove not emulated inside iframe https://bugs.webkit.org/show_bug.cgi?id=111292

Reviewed by Vsevolod Vlasov.

Source/WebCore:

Move fake touch event dispatching from mouseMoved() into handleMouseMoveEvent()
and bail out earlier from dispatchSyntheticTouchEventIfEnabled() when the event
should be dispatched on a subframe.

* page/EventHandler.cpp:
(WebCore::EventHandler::mouseMoved):
(WebCore::EventHandler::handleMouseMoveEvent):
(WebCore::EventHandler::dispatchSyntheticTouchEventIfEnabled):

LayoutTests:

* fast/events/touch/emulated-touch-iframe.html:
* fast/events/touch/resources/emulated-touch-iframe2.html:

Canonical link: https://commits.webkit.org/129654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144608 268f45cc-cd09-0410-ab3c-d52691b4dbfc